Fix bug width of dropdown on mobile

--- a/packages/wc-compass/src/components/dropdown/_dropdown.scss
+++ b/packages/wc-compass/src/components/dropdown/_dropdown.scss
@@ -185,6 +185,7 @@
 }
 
 .cdg-dropdown-select-floating-container {
+  max-width: 100vw;
   .cdg-floating-content {
     margin-top: 4px;
   }
